--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:background="#3F2E76"
+            android:background="#805ad5"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
             <LinearLayout
@@ -26,37 +26,13 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <Space
-                    android:layout_width="299dp"
+                <TextView
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2" />
+                    android:layout_weight="2"
+                    android:text="testbuild" />
 
-                <ImageButton
-                    android:id="@+id/stopbut"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0"
-                    android:background="#00FFFFFF"
-                    android:contentDescription="@string/stopbut"
-                    android:foregroundGravity="top|left|bottom|center_vertical|center|fill_vertical"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:srcCompat="@drawable/ic_stop" />
 
-                <ImageButton
-                    android:id="@+id/btnclickme"
-                    android:layout_width="50dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0"
-                    android:background="#00FFFFFF"
-                    android:contentDescription="@string/refresh"
-                    android:foregroundGravity="top|left|bottom|center_vertical|center|fill_vertical"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:srcCompat="@drawable/ic_refresh" />
-
-                <Space
-                    android:layout_width="25dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0" />
 
             </LinearLayout>
 
@@ -66,7 +42,7 @@
             android:id="@+id/progressBar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
-            android:layout_height="8dp"
+            android:layout_height="7dp"
             android:background="#FFFFFF"
             android:backgroundTint="?attr/colorPrimary"
             android:indeterminate="true"
@@ -76,22 +52,21 @@
             android:visibility="visible"
             tools:visibility="visible" />
 
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+
+            android:id="@+id/swipeContainer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.izikode.izilib.veinview.VeinView
+                android:id="@+id/webview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:backgroundTint="#805ad5" />
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
 
-        android:id="@+id/swipeContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <WebView
-            android:id="@+id/webview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-        </WebView>
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-</LinearLayout>
+</RelativeLayout>
