--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,14 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:theme="@style/NavigationDrawerStyle"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-
-
     android:layout_height="match_parent"
+
+
+    android:background="#000000"
     android:fitsSystemWindows="true"
+    app:theme="@style/NavigationDrawerStyle"
     tools:openDrawer="start">
 
     <include
@@ -26,13 +27,13 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:layout_marginTop="?attr/actionBarSize"
-        android:background="#1E1135"
+        android:background="#000000"
         android:checkableBehavior="single"
         android:fitsSystemWindows="true"
         android:isScrollContainer="true"
         app:headerLayout="@layout/nav_header"
-        app:itemIconTint="@color/colorAccented"
-        app:itemTextColor="@color/colorPrimary"
+        app:itemIconTint="#805AD5"
+        app:itemTextColor="#FFFFFF"
 
 
         app:menu="@menu/nav_menu"
