--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,12 +6,13 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:scrollbarThumbVertical">@android:color/transparent</item>
         <item name="android:navigationBarColor">@color/colorPrimary</item>
+        <item name="android:windowDisablePreview">true</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-
+        <item name="android:windowDisablePreview">true</item>
     </style>
     <style name="NavigationDrawerStyle">
 
