--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,12 +6,14 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:scrollbarThumbVertical">@android:color/transparent</item>
         <item name="android:navigationBarColor">@color/colorPrimary</item>
+        <item name="android:windowDisablePreview">true</item>
+        <item name="android:windowBackground">@color/colorPrimary</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-
+        <item name="android:windowDisablePreview">true</item>
     </style>
     <style name="NavigationDrawerStyle">
 
@@ -28,7 +30,10 @@
         <!-- item padding right in menu-->
         <item name="android:listPreferredItemPaddingRight">8dp</item>
         <item name="listPreferredItemPaddingRight">8dp</item>
+        <item name="android:windowDisablePreview">true</item>
+        <item name="android:windowBackground">@color/colorPrimary</item>
     </style>
+
 
 </resources>
 
