--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:background="@drawable/head"
@@ -7,4 +8,5 @@
     android:paddingLeft="0dp"
     android:paddingBottom="0dp"
     android:scrollbarSize="2dp"
-    android:textColor="#ECECEC" />
+    android:textColor="#ECECEC"
+    tools:ignore="Overdraw" />
