--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,12 +2,11 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">#6D805AD5</item>
+        <item name="colorPrimaryDark">#000000</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:scrollbarThumbVertical">@android:color/transparent</item>
         <item name="android:navigationBarColor">@color/colorPrimary</item>
         <item name="android:windowDisablePreview">true</item>
-        <item name="android:windowBackground">@color/colorPrimary</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -30,8 +29,6 @@
         <!-- item padding right in menu-->
         <item name="android:listPreferredItemPaddingRight">8dp</item>
         <item name="listPreferredItemPaddingRight">8dp</item>
-        <item name="android:windowDisablePreview">true</item>
-        <item name="android:windowBackground">@color/colorPrimary</item>
     </style>
 
     <style name="ThemeOverlay.AppCompat.navTheme">
@@ -45,4 +42,3 @@
     </style>
 
 </resources>
-
