--- a/app/src/main/res/raw/cssinject.css
+++ b/app/src/main/res/raw/cssinject.css
@@ -11,10 +11,11 @@ background-attachment: fixed;
 background-image: url("https://ruqqus.com/assets/images/guilds/default-guild-banner.png");
 }
 *, ::before, ::after {
-color: darkgray;
+color: #805ad5;
+
 }
 .navbar-light {
-background-color: #000;
+background-color: #000000e6;
 }
 .navbar-nav .nav-link, .navbar-expand-md .navbar-nav .nav-link {
 color: #805ad5;
@@ -31,9 +32,10 @@ padding-top: 5px;
 .post-actions {
 color: #a0aec0;
 font-weight: 400;
-box-shadow: 1px 1px 0px 0px #767676;
+box-shadow: 1px 1px 0px 0px #805ad5;
 border-left: hidden;
 border-radius: 10px;
+
 }
 .score {
 color: #718096;
@@ -63,7 +65,7 @@ color: #747474;
 font-weight: 900;
 }
 .score {
-color: #747474;
+color: #fff;
 font-weight: 900;
 }
 .comment-actions .list-inline {
@@ -78,7 +80,7 @@ border-radius: 10px;
 }
 .comment .comment-body .user-info {
 font-size: 15px;
-color: #718096;
+color: #0067ff;
 margin-bottom: .25rem;
 margin-top: -.25rem;
 margin-left: 0.5rem;
@@ -100,10 +102,10 @@ margin-top: 15px;
 margin-right: 3px
 }
 #fixed-bar-mobile {
-box-shadow: 1px 1px 1px rgba(255, 255, 255, 0.05),0 0 0 1px rgb(68, 68, 68);
+box-shadow: 2px 2px 2px rgba(255, 255, 255, 0.05),0 0 0 2px rgb(255, 255, 255);
 }
 .bg-white {
-background-color: #000 !important;
+background-color: #000000de !important;
 }
 .pl-3, .px-3 {
 padding-left: 35% !important;
@@ -113,24 +115,122 @@ background-color: black;
 font-size: 1.3rem;
 color: #fff;
 }
-
 .dropdown-actions .fa, .dropdown-actions .fas, .dropdown-actions .far {
-	font-size: 1.3rem;
-	color: #805ad5;
-	background-color: black;
-	width: 1.6rem;
+font-size: 1.3rem;
+color: #805ad5;
+background-color: black;
+width: 1.6rem;
 }
 .dropdown-menu.show {
-	display: block;
-	background: black;
+display: block;
+background: black;
 }
 .dropdown-item {
-	color: #fff;
+color: #fff;
 }
 .text-muted {
+color: #fff !important;
+font-weight: 600;
+}
+.font-weight-normal {
+font-weight: 600 !important;
+}
+#frontpage .posts .card, #userpage .posts .card, #search .posts .card, #guild .posts .card, #settings-guild .posts .card {
+border-style: hidden;
+}
+.post-actions .fa, .post-actions .fas, .post-actions .far {
+font-size: 1.2rem;
+color: #805adf;
+margin-left: 10px;
+margin-top: 15px;
+}
+.post-title {
+font-size: 14px;
+font-weight: 400;
+line-height: normal;
+padding-top: 7px;
+}
+#thread #main-content-col {
+background-attachment: fixed;
+background-image: url("https://ruqqus.com/assets/images/guilds/default-guild-banner.png");
+}
+.comment-write.collapsed textarea {
+background-color: #805ad5;
+}
+.comment .comment-body .comment-text {
+margin-bottom: 1rem;
+word-break: break-word;
+}
+
+.comment-actions .score {
+color: #fff;
+font-weight: 900;
+}
+.score {
+color: #f8f8f8;
+font-weight: 900;
+}
+.comment-actions .list-inline {
+margin-bottom: 1rem;
+word-break: break-word;
+color: #877ae4;
+overflow: hidden;
+border-style: hidden;
+border-left-style: hidden;
+box-shadow: 1px 1px 0px 0px #805ad5;
+border-radius: 10px;
+}
+.comment-actions .score {
+font-weight: 600;
+font-size: 1.25rem;
+}
+.comment .comment-body .comment-text {
+margin-bottom: 1rem;
+}
+p {
+margin-left: 0.5rem;
+color: white;
+font-weight: 600;
+}
+.profile-pic-25 { width: 45px;
+height: 45px;
+border-radius: 10%;
+}
+.comment-actions .score { font-weight: 600;
+}
+.comment .comment-body .comment-text { margin-bottom: 1rem;
+word-break: break-word;
+background-color: #00000038;
+	border-radius: 10px;
+	box-shadow: 1px 1px 3px 0px #805ad5;
+	padding: 8px;
+
+    margin-left: 0.5rem;
+    color: white;
+    font-weight: 600;
+}
+.comment .comment-body .comment-text {
+color: #fff;
+}
+.comment-section {
+	background-color: #000000a1;
+}
+.comment .comment-body .user-name {
+    color: #af8cff;
+    font-weight: 600;
+}
+.text-black {
     color: #fff !important;
     font-weight: 600;
 }
-.font-weight-normal {
-    font-weight: 600 !important;
+element {
+	margin-top: -70px;
+	background-color: transparent;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1px !important;
+    background-color: #000000b5;
+}
+.text-gray-500 {
+    color: #fff0 !important;
 }
