--- a/app/src/main/res/raw/cssinject.css
+++ b/app/src/main/res/raw/cssinject.css
@@ -198,7 +198,8 @@ border-radius: 10%;
 }
 .comment-actions .score { font-weight: 600;
 }
-.comment .comment-body .comment-text { margin-bottom: 1rem;
+.comment .comment-body .comment-text {
+margin-bottom: 1rem;
 word-break: break-word;
 background-color: #00000038;
 	border-radius: 10px;
@@ -233,4 +234,20 @@ element {
 }
 .text-gray-500 {
     color: #fff0 !important;
+}
+.post-title a {
+    color: #fff;
+    padding-left: 5px;
+}
+.card {
+background: transparent;
+}
+#thread, #userpage {
+    background-color: #000;
+    background-image: url("https://ruqqus.com/assets/images/guilds/default-guild-banner.png");
+}
+
+.box-shadow-bottom {
+    box-shadow: inset 0 -1px 0 #e2e8f0;
+    background-color: #000000c7;
 }
